# sair

./: .env.example  .gitignore  CLAUDE.md  README.md  baby_run.py  baby_run_claude.py
autoresearch/: analysis.ipynb  cheatsheet.txt  evaluate.py  export.py  observe.py  prepare.py  program.md  pyproject.toml
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/components/: AutoResearchView.tsx  EvalExplorer.tsx  GepaExperiments.tsx  GepaReplay.tsx  LeaderboardView.tsx  ModelBreakdownView.tsx  ProblemExplorer.tsx  RunsExplorer.tsx
dashboard/lib/: autoresearch-db.ts  db.ts
dashboard/public/data/: benchmarks.json  leaderboard.json  model_breakdown.json  models.json  problem_difficulty.json  problems_hard1.json  (+3 more)
data/: benchmark_benchmarks.csv  benchmark_benchmarks.jsonl  benchmark_leaderboard.csv  benchmark_leaderboard.jsonl  benchmark_models.csv  benchmark_prompt_templates.csv  benchmark_prompt_templates.jsonl  problems_hard.jsonl  problems_hard1.csv  problems_hard1.jsonl  problems_hard2.csv  problems_hard2.jsonl  problems_hard3.jsonl  problems_normal.csv  problems_normal.jsonl
docs/: autoresearch.md  autoresearch_formulation.md  gepa.md  strategy_analysis.md
scripts/: build_runs_sample.py  build_sqlite.py  test_cc_sdk.py
src/: cc_adapter.py  data.py  export.py  extract_gepa_state.py  metric.py  observer.py  run_eval.py  run_gepa.py  seed_from_32d09f740fd2.txt  solver.py
tests/: test_cc_adapter.py  test_data.py  test_metric.py  test_observer.py  test_run_eval.py  test_solver.py
(+7 files in other folders)
