[project]
name = "autoresearch-cheatsheet"
version = "0.1.0"
description = "Autonomous cheatsheet optimization for SAIR equational theories competition"
requires-python = ">=3.12"
dependencies = [
    "litellm[google]>=1.70.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
]
